added initial particle instantiation

--- a/ui/src/css/index.css
+++ b/ui/src/css/index.css
@@ -3,12 +3,8 @@ html, body {
     padding: 0;
 }
 
-#AppCanvas {
-    position: absolute;
-    display: block;
-    top: 0;
-    left: 0;
-    z-index: 0;
+#InitialParticles {
+    background-color: #6666ff;
 }
 
 #AppInputArea {
@@ -25,4 +21,13 @@ html, body {
     border: 1px solid black;
     box-shadow: 0 0 5px black;
     resize: none;
+}
+
+#OutputContainer {
+    position: relative;
+}
+
+.output-particle-group {
+    position: absolute;
+    width: 100%;
 }
